# factory-ai-droid-switch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/images/: README.md
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: balance.rs  config.rs  droid_config.rs  lib.rs  main.rs  model_manager.rs  models.rs  provider_manager.rs
src/components/: AddProviderForm.tsx  BackgroundSettings.tsx  BalanceDisplay.tsx  BatchImport.tsx  ConfirmDialog.tsx  ModelSelector.tsx  ProviderList.tsx  SystemPromptEditor.tsx  ThemeProvider.tsx
src/components/ui/: DynamicBackground.tsx  SpotlightCard.tsx  StarryBackground.tsx  ThemeToggle.tsx  alert-dialog.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  sonner.tsx  switch.tsx  textarea.tsx
src/contexts/: BackgroundContext.tsx
src/hooks/: useBalance.ts  useModal.ts  useModels.ts  useProviders.ts  useSystemPrompt.ts
src/lib/: format.ts  validation.ts
src/types/: api.ts
