[package]
name = "factory-ai-droid-switch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "droid_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.47", features = ["time"] }
regex = "1.11"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

